<resources>
    <string name="app_name">Slagalica</string>
    <string name="welcome_title">Slagalica</string>
    <string name="go_login">Login</string>
    <string name="go_register">Registracija</string>
    <string name="go_reset">Reset lozinke</string>
    <string name="go_korak">Korak po korak</string>
    <string name="go_moj_broj">Moj broj</string>
    <string name="go_profile">Profil</string>
    <string name="go_ko_zna_zna">Ko zna zna</string>
    <string name="go_spojnice">Spojnice</string>
    <string name="go_asocijacije">Asocijacije</string>
    <string name="go_skocko">Skocko</string>
    <string name="go_notifikacije">Notifikacije</string>
    <string name="go_chat">Cet</string>
    <string name="go_regions">Regioni</string>
    <string name="main_account_section">Nalog</string>
    <string name="main_games_section">Igre</string>
    <string name="main_match_section">Partija</string>
    <string name="go_full_match">Igraj partiju</string>
    <string name="final_result_title">Kraj partije</string>
    <string name="final_result_main_menu">Glavni meni</string>
    <string name="email_or_username">Email ili korisnicko ime</string>
    <string name="email">Email</string>
    <string name="username">Korisnicko ime</string>
    <string name="password">Lozinka</string>
    <string name="old_password">Stara lozinka</string>
    <string name="new_password">Nova lozinka</string>
    <string name="repeat_password">Ponovljena lozinka</string>
    <string name="region">Region</string>
    <string name="login_action">Login</string>
    <string name="register_action">Registracija</string>
    <string name="reset_action">Reset lozinke</string>
    <string name="open_step">Koraci se otvaraju automatski</string>
    <string name="check_solution">Proveri</string>
    <string name="submit_result">Potvrdi</string>
    <string name="delete_last">Obrisi</string>
    <string name="stop_button">STOP</string>
    <string name="hint_solution">Unesi resenje</string>
    <string name="hint_expression">Unesi izraz</string>
    <string name="timer_text">Vreme: %1$ds</string>
    <string name="timer_text_60">Vreme: 60s</string>
    <string name="points_text">Poeni: %1$d</string>
    <string name="player_one">Igrac 1</string>
    <string name="player_two">Igrac 2</string>
    <string name="player_points">Poeni: %1$d</string>
    <string name="result_text">Rezultat: %1$s</string>
    <string name="round_one_of_two">Runda: 1/2</string>
    <string name="moj_broj_round_end">Vreme je isteklo. Runda je zavrsena.</string>
    <string name="error_fill_fields">Popunite sva obavezna polja.</string>
    <string name="error_password_mismatch">Lozinke se ne poklapaju.</string>
    <string name="mock_login_success">Uspesan login.</string>
    <string name="mock_register_email">Registracija je uspešna. Na Vašu email adresu poslat je link za potvrdu naloga. Proverite prijemno sanduče, kao i Spam/Neželjenu poštu.</string>
    <string name="mock_reset_success">Lozinka je uspesno promenjena.</string>
    <string name="firebase_not_ready">Firebase nije inicijalizovan. Proverite google-services.json i Firebase podesavanja.</string>
    <string name="email_not_verified">Vaš nalog još nije potvrđen. Molimo proverite email i kliknite na link za potvrdu naloga.</string>
    <string name="chat_title">Cet</string>
    <string name="chat_message_hint">Unesi poruku</string>
    <string name="chat_send">Posalji</string>
    <string name="chat_missing_region">Region nije podesen za ovog korisnika.</string>
    <string name="chat_empty_message">Poruka ne moze biti prazna.</string>
    <string name="chat_region_status">Regionalni cet: %1$s</string>
    <string name="regions_title">Regioni Srbije</string>
    <string name="regions_loading">Ucitavanje regiona...</string>
    <string name="regions_missing_region">Region nije podesen za ovog korisnika. Prikazani su dostupni regionalni podaci.</string>
    <string name="regions_current_region">Vas region: %1$s</string>
    <string name="regions_ranking_title">Mesecni regionalni rang</string>
    <string name="regions_stars_value">%1$d zvezda</string>
    <string name="region_detail_title">Region</string>
    <string name="region_detail_monthly_stars">Mesecne zvezde: %1$d</string>
    <string name="region_detail_first">Osvojena prva mesta: %1$d</string>
    <string name="region_detail_second">Osvojena druga mesta: %1$d</string>
    <string name="region_detail_third">Osvojena treca mesta: %1$d</string>
    <string name="region_detail_active">Trenutno aktivni igraci: %1$d</string>
    <string name="region_detail_total">Ukupno registrovani igraci: %1$d</string>
    <string name="region_detail_previous">Prethodni ciklus: %1$s</string>
    <string name="region_place_first">1. mesto</string>
    <string name="region_place_second">2. mesto</string>
    <string name="region_place_third">3. mesto</string>
    <string name="region_place_none">bez plasmana</string>
    <string name="region_back">Nazad</string>
    <string name="invalid_email">Email adresa nije validna.</string>
    <string name="waiting_opponent">Ceka se drugi igrac...</string>
    <string name="not_your_turn">Nije vas potez.</string>
    <string name="korak_title">Korak po korak</string>
    <string name="moj_broj_title">Moj broj</string>
    <string name="target_number_label">Trazeni broj</string>
    <string name="target_number">%1$d</string>
    <string name="profile_title">Profil korisnika</string>
    <string name="profile_username_label">Korisnicko ime</string>
    <string name="profile_email_label">Email adresa</string>
    <string name="profile_name_value">ana_igra</string>
    <string name="profile_email_value">ana.igra@example.com</string>
    <string name="profile_change_avatar">Izmeni avatar</string>
    <string name="profile_tokens_value">Broj tokena: 12</string>
    <string name="profile_stars_value">Ukupno zvezda: 184</string>
    <string name="profile_league_value">Liga: Zlatna liga</string>
    <string name="profile_region_value">Region: Vojvodina</string>
    <string name="profile_qr_label">Pozovi prijatelja</string>
    <string name="profile_qr_hint">Skeniraj QR kod za poziv u partiju.</string>
    <string name="profile_section_basic">Osnovni podaci</string>
    <string name="profile_section_league">Liga i region</string>
    <string name="profile_section_games">Statistika igara</string>
    <string name="profile_section_details">Detaljna statistika igara</string>
    <string name="profile_section_total">Ukupna statistika</string>
    <string name="profile_stats_avg">Ko zna zna: 18-24 poena po partiji
Moj broj: 6-10 poena po partiji
Korak po korak: 8-12 poena po partiji
Asocijacije: 12-18 poena po partiji
Skocko: 10-16 poena po partiji
Spojnice: 6-10 poena po partiji</string>
    <string name="profile_stats_details">Ko zna zna:
Pogodjeno: 64
Promaseno: 21

Moj broj:
Tacan broj pronadjen: 58%

Korak po korak:
1. korak: 8%
2. korak: 14%
3. korak: 18%
4. korak: 21%
5. korak: 19%
6. korak: 12%
7. korak: 8%

Asocijacije:
Resene: 33
Neresene: 12

Skocko:
1-2. pokusaj: 18%
3-4. pokusaj: 37%
5-6. pokusaj: 26%
Nije pogodjeno: 19%

Spojnice:
Uspesno povezano: 72%</string>
    <string name="profile_stats_total">Ukupno odigranih partija: 148
Pobede: 57%
Porazi: 43%</string>
    <string name="profile_logout">Odjava</string>
    <string name="kznz_title">Ko zna zna</string>
    <string name="kznz_question_counter">Pitanje %1$d/%2$d</string>
    <string name="kznz_next_question">Sledece pitanje</string>
    <string name="kznz_answer_correct">Tacan odgovor: +10 poena</string>
    <string name="kznz_answer_wrong">Netacan odgovor: -5 poena</string>
    <string name="kznz_timeout">Vreme je isteklo. Nema poena.</string>
    <string name="kznz_finished">Rezultat igre</string>
    <string name="kznz_final_score">Konacan rezultat: %1$d poena</string>
    <string name="kznz_mock_speed_rule">Ako oba igraca odgovore tacno, bodove dobija brzi igrac.</string>
    <string name="kznz_done">Zavrseno</string>
    <string name="spojnice_title">Spojnice</string>
    <string name="spojnice_round">Runda %1$d/%2$d</string>
    <string name="spojnice_check_round">Proveri rundu</string>
    <string name="spojnice_next_round">Sledeca runda</string>
    <string name="spojnice_finished">Zavrseno</string>
    <string name="spojnice_round_result">Tacni parovi: %1$d | Osvojeno poena: %2$d</string>
    <string name="spojnice_points_single_round">Poeni: %1$d/10</string>
    <string name="spojnice_round_points">Poeni runde: %1$d/10</string>
    <string name="spojnice_total_points">Ukupno poena: %1$d/20</string>
    <string name="spojnice_final_result">Konacan rezultat: %1$d/20</string>
    <string name="asocijacije_title">Asocijacije</string>
    <string name="asocijacije_col_a">Kolona A</string>
    <string name="asocijacije_col_b">Kolona B</string>
    <string name="asocijacije_col_c">Kolona C</string>
    <string name="asocijacije_col_d">Kolona D</string>
    <string name="asocijacije_konacno">Konacno resenje</string>
    <string name="asocijacije_hint_column">Unesi resenje kolone</string>
    <string name="asocijacije_hint_final">Unesi konacno resenje</string>
    <string name="asocijacije_open_field">Otvori polje</string>
    <string name="asocijacije_check">Proveri resenje</string>
    <string name="asocijacije_mock_status">GUI prikaz: bez backend logike za KT1.</string>
    <string name="asocijacije_timer">Vreme: 90s</string>
    <string name="asocijacije_points">Poeni: 0</string>
    <string name="asocijacije_a1">A1: ?</string>
    <string name="asocijacije_a2">A2: ?</string>
    <string name="asocijacije_a3">A3: ?</string>
    <string name="asocijacije_a4">A4: ?</string>
    <string name="asocijacije_b1">B1: ?</string>
    <string name="asocijacije_b2">B2: ?</string>
    <string name="asocijacije_b3">B3: ?</string>
    <string name="asocijacije_b4">B4: ?</string>
    <string name="asocijacije_c1">C1: ?</string>
    <string name="asocijacije_c2">C2: ?</string>
    <string name="asocijacije_c3">C3: ?</string>
    <string name="asocijacije_c4">C4: ?</string>
    <string name="asocijacije_d1">D1: ?</string>
    <string name="asocijacije_d2">D2: ?</string>
    <string name="asocijacije_d3">D3: ?</string>
    <string name="asocijacije_d4">D4: ?</string>
    <string name="skocko_title">Skocko</string>
    <string name="skocko_target_label">Pokusaj pogoditi kombinaciju od 4 simbola.</string>
    <string name="skocko_timer">Vreme: 60s</string>
    <string name="skocko_points">Poeni: 0</string>
    <string name="skocko_row_1">Red 1</string>
    <string name="skocko_row_2">Red 2</string>
    <string name="skocko_row_3">Red 3</string>
    <string name="skocko_row_4">Red 4</string>
    <string name="skocko_row_5">Red 5</string>
    <string name="skocko_row_6">Red 6</string>
    <string name="skocko_choose_symbol">Izaberi simbol</string>
    <string name="skocko_round_label">Runda 1/2</string>
    <string name="skocko_next_round">Sledeca runda</string>
    <string name="asocijacije_round_label">Runda 1/2</string>
    <string name="asocijacije_next_round">Sledeca runda</string>
    <string name="skocko_pick_hint">Izaberi simbol klikom na jednu od 6 ikonica iznad da popunis prvo prazno polje.</string>
    <string name="skocko_feedback_hint">Kvadrati desno: crveno = tacno mesto; zuto = tacan simbol ali na drugom mestu.</string>
    <string name="skocko_slot_empty">Prazno polje</string>
    <string name="skocko_need_four">Popuni sva cetiri polja, zatim klikni Proveri da predjes na sledeci pokusaj.</string>
    <string name="notifikacije_title">Notifikacije</string>
    <string name="notifikacije_subtitle">Pregled sistema obavestenja i podsetnika</string>
    <string name="notifikacije_section_list">Skorasnje notifikacije</string>
    <string name="notifikacije_tab_unread">Neprocitane</string>
    <string name="notifikacije_tab_read">Procitane</string>
    <string name="notifikacije_mark_all">Oznaci sve kao procitano</string>
</resources>