<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textColor="@color/text_main"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_card"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_primary"
                android:text="@string/go_login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_secondary"
                android:text="@string/go_register"
                android:textColor="@color/text_main" />

            <Button
                android:id="@+id/btnReset"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_primary"
                android:text="@string/go_reset"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnKorak"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_secondary"
                android:text="@string/go_korak"
                android:textColor="@color/text_main" />

            <Button
                android:id="@+id/btnMojBroj"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_primary"
                android:text="@string/go_moj_broj"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
